# AIAS

./: .gitignore  AIAS.py  README.md  package-lock.json  package.json  run.bat  version.txt  vite.config.js
.kilo/skills/ui-ux-pro-max/: SKILL.md
scripts/: dev.js  start-electron.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/main/: main.js  preload.js
src/main/services/: settings-service.js  skin-service.js  texture-service.js
src/main/utils/: process.js
src/renderer/: index.html
src/renderer/scripts/: app.js
src/renderer/styles/: app.css  performance.css
