[package]
name = "aias"
version = "4.1.0"
description = "AIAS texture processing toolbox"
authors = ["AvroraCL"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tga"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
