[package]
name = "aias"
version = "5.1.6"
description = "AIAS texture processing toolbox"
authors = ["AvroraCL"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tga"] }
image_dds = { version = "0.7.2", default-features = false, features = ["ddsfile", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
texpresso = "2.0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

# 快速打包：跳过 LTO 和多线程编译（正式发布用 release）
[profile.release-fast]
inherits = "release"
codegen-units = 8
lto = false
strip = false
